--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -23,8 +23,11 @@ mosip.kernel.keygenerator.asymmetric-algorithm-name=RSA
 mosip.kernel.keygenerator.asymmetric-key-length=2048
 mosip.kernel.keygenerator.symmetric-algorithm-name=AES
 mosip.kernel.keygenerator.symmetric-key-length=256
-mosip.kernel.crypto.symmetric-algorithm-name=AES
-mosip.kernel.crypto.asymmetric-algorithm-name=RSA
+mosip.kernel.crypto.symmetric-algorithm-name=AES/GCM/PKCS5Padding
+mosip.kernel.crypto.asymmetric-algorithm-name=RSA/ECB/OAEPWITHSHA-256ANDMGF1PADDING
+mosip.kernel.crypto.gcm-tag-length=128
+mosip.kernel.crypto.hash-algorithm-name=PBKDF2WithHmacSHA512
+mosip.kernel.crypto.sign-algorithm-name=RS256
 
 
 mosip.kernel.signature.cryptomanager-encrypt-url=https://dev.mosip.io/v1/cryptomanager/private/encrypt
