--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -7,11 +7,11 @@
 	<parent>
 		<groupId>io.mosip.admin</groupId>
 		<artifactId>admin-parent</artifactId>
-		<version>1.1.3-SNAPSHOT</version>
+		<version>1.1.3-rc1</version>
 	</parent>
 	<artifactId>admin-service</artifactId>
 	<name>admin-service</name>
-	<version>1.1.3-SNAPSHOT</version>
+	<version>1.1.3-rc1</version>
 	<url>http://maven.apache.org</url>
 	<packaging>jar</packaging>
 	<properties>
@@ -21,7 +21,7 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-core</artifactId>
-			<version>1.1.3-SNAPSHOT</version>
+			<version>1.1.3-rc1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -32,17 +32,17 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-auth-adapter</artifactId>
-			<version>1.1.3-SNAPSHOT</version>
+			<version>1.1.3-rc1</version>
 		</dependency>
 	    <dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-authcodeflowproxy-api</artifactId>
-			<version>1.1.3-SNAPSHOT</version>
+			<version>1.1.3-rc1</version>
 		</dependency>
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-dataaccess-hibernate</artifactId>
-			<version>1.1.3-SNAPSHOT</version>
+			<version>1.1.3-rc1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
