--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -238,7 +238,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-war-plugin</artifactId>
-					<version>${maven.war.plugin.versoon}</version>
+					<version>${maven.war.plugin.version}</version>
 					<configuration>
 						<archive>
 							<manifest>
