--- a/admin/admin-service/src/test/resources/application-test.properties
+++ b/admin/admin-service/src/test/resources/application-test.properties
@@ -260,14 +260,14 @@ mosip.admin.packetstatus.api=https://dev.mosip.io/registrationprocessor/v1/regis
 mosip.admin.packetstatus.api.version=1.0
 mosip.admin.packetstatus.api.statuscode=PROCESSING
 mosip.admin.packetstatus.api.packetId=mosip.registration.status
-mosip.kernel.packet-status-update-url=https://qa.mosip.io/registrationprocessor/v1/registrationtransaction/search
-mosip.kernel.zone-validation-url=http://localhost:8086/v1/masterdata/zones/authorize
+mosip.kernel.packet-status-update-url=https://dev.mosip.io/registrationprocessor/v1/registrationtransaction/search
+mosip.kernel.zone-validation-url=https://dev.mosip.io/v1/masterdata/zones/authorize
 mosip.kernel.registrationcenterid.length=5
 
 mosip.kernel.audit.manager.api=https://dev.mosip.io/v1/auditmanager/audits
 mosip.kernel.masterdata.audit-url=https://dev.mosip.io/v1/auditmanager/audits
 mosip.admin-services.audit.manager.api=https://dev.mosip.io/v1/auditmanager/audits
-
+KEYBASEDTOKENAPI=https://dev.mosip.net/v1/authmanager/authenticate/clientidsecretkey
 mosip.open-id.base-url=https://mosipkeycloak.southindia.cloudapp.azure.com
 
 mosip.admin-services.open-id.realmid=mosip
