--- a/admin/kernel-masterdata-service/src/main/resources/application-local.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-local.properties
@@ -51,3 +51,6 @@ masterdata.registerdevice.timestamp.validate=+5
 mosip.kernel.applicant.type.age.limit = 5
 mosip.stage.environment=Staging
 mosip.auth.adapter.impl.basepackage=io.mosip.kernel.auth.defaultadapter
+mosip.kernel.applicantType.mvel.file=applicanttype.mvel
+mosip.kernel.config.server.file.storage.uri=https://dev.mosip.net/config/kernel/mz/1.1.4
+aplication.configuration.level.version=1.1.4
