--- a/admin/admin-service/src/main/resources/bootstrap.properties
+++ b/admin/admin-service/src/main/resources/bootstrap.properties
@@ -16,7 +16,8 @@ management.endpoints.web.exposure.include=info,health,refresh
 
 server.port=8098
 server.servlet.path=/v1/admin
-
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
 #javax.persistence.jdbc.url=${masterdata_database_url}
 #javax.persistence.jdbc.user=${masterdata_database_username}
 #javax.persistence.jdbc.password=${masterdata_database_password}
