--- a/admin/kernel-syncdata-service/src/main/resources/application-local.properties
+++ b/admin/kernel-syncdata-service/src/main/resources/application-local.properties
@@ -16,7 +16,7 @@ mosip.kernel.keymanager-service-publickey-url=https://dev.mosip.net/v1/keymanage
 mosip.kernel.syncdata.cryptomanager-encrypt-url=https://dev.mosip.net/v1/cryptomanager/private/encrypt
 mosip.kernel.syncdata.public-key-url=https://dev.mosip.net/v1/keymanager/publickey/{applicationId}
 
-mosip.kernel.keymanager-service-sign-url=https://dev.mosip.io/v1/keymanager/sign
+mosip.kernel.keymanager-service-sign-url=https://dev.mosip.net/v1/keymanager/sign
 
 mosip.kernel.signature.signature-request-id=SIGNATURE.REQUEST
 mosip.kernel.signature.signature-version-id=v1.0
@@ -44,7 +44,7 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
 mosip.kernel.syncdata-service-idschema-url=http://localhost:8086/v1/masterdata/idschema/latest
-mosip.kernel.syncdata-service-dynamicfield-url=http://localhost:8086/v1/masterdata/dynamicfields
+mosip.kernel.syncdata-service-dynamicfield-url=https://dev.mosip.net/v1/masterdata/dynamicfields
 
 mosip.auth.adapter.impl.basepackage=io.mosip.kernel.auth.defaultadapter
 mosip.kernel.keymanager-service-validate-url=http://localhost:8088/v1/keymanager/validate
@@ -73,15 +73,15 @@ mosip.kernel.auth.sendotp.url=https://dev.mosip.net/v1/authmanager/authenticate/
 
 #----------------- Websub config -----------------
 
-syncdata.websub.topic.ca-cert=test
+syncdata.websub.topic.ca-cert=CA_CERTIFICATE_UPLOADED
 syncdata.websub.callback.secret.ca-cert=secret
-syncdata.websub.callback.url.path.ca-cert=/callback/partner/ca_certificate
-syncdata.websub.callback.url.preauth.path.ca-cert=/v1/syncdata/callback/partner/ca_certificate
-syncdata.websub.callback.url.ca-cert=http://localhost:8089/v1/syncdata/callback/partner/ca_certificate
+syncdata.websub.callback.url.path.ca-cert=/v1/syncdata/websub/callback/cacert
+syncdata.websub.callback.url.ca-cert=http://localhost:8089/v1/syncdata/websub/callback/cacert
 websub.publish.url=http://localhost:9191/websub/publish
 websub.hub.url=http://localhost:9191/websub/hub
 syncdata.websub.resubscription.retry.count=3
-syncdata.websub.resubscription.delay.secs=60000
+syncdata.websub.resubscription.delay.secs=6000000
+subscriptions-delay-on-startup=120000
 
 #----------------------- key manager config ---------------------------------------
 #Crypto asymmetric algorithm name
@@ -112,7 +112,7 @@ mosip.kernel.crypto.sign-algorithm-name=RS256
 mosip.kernel.certificate.sign.algorithm=SHA256withRSA
 
 mosip.kernel.keymanager.hsm.config-path=
-mosip.kernel.keymanager.hsm.keystore-type=
+mosip.kernel.keymanager.hsm.keystore-type=OFFLINE
 mosip.kernel.keymanager.hsm.keystore-pass=
 
 mosip.kernel.keymanager.certificate.default.organizational-unit=MOSIP-TECH-CENTER
