--- a/hotlist-service/pom.xml
+++ b/hotlist-service/pom.xml
@@ -28,6 +28,7 @@
 		<!-- kernel properties -->
 		<kernel-core.version>1.2.0-SNAPSHOT</kernel-core.version>
 		<kernel-auth-adapter.version>1.2.0-SNAPSHOT</kernel-auth-adapter.version>
+		<kernel-websubclient-api.version>1.2.0-SNAPSHOT</kernel-websubclient-api.version>
 	</properties>
 
 	<dependencies>
@@ -65,6 +66,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<version>${spring.boot.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.mosip.kernel</groupId>
+			<artifactId>kernel-websubclient-api</artifactId>
+			<version>${kernel-websubclient-api.version}</version>
 		</dependency>
 	</dependencies>
 	<build>
