--- a/admin/kernel-masterdata-service/pom.xml
+++ b/admin/kernel-masterdata-service/pom.xml
@@ -121,6 +121,7 @@
 		<kernel.logger.logback.version>1.2.0-SNAPSHOT</kernel.logger.logback.version>
 		<kernel.websubclient.api.version>1.2.0-SNAPSHOT</kernel.websubclient.api.version>
 		<tss.version>0.3.0</tss.version>
+		<kernel.websubclient.api.version>1.2.0-SNAPSHOT</kernel.websubclient.api.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -215,7 +216,6 @@
 			<artifactId>kernel-websubclient-api</artifactId>
 			<version>${kernel.websubclient.api.version}</version>
 		</dependency>
-
 	</dependencies>
 
 	<distributionManagement>
