--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -16,6 +16,7 @@
 	<packaging>jar</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<spring-cloud-config.version>2.0.4.RELEASE</spring-cloud-config.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -55,12 +56,7 @@
 			<artifactId>postgresql</artifactId>
 			<version>${postgresql.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<version>${spring.boot.version}</version>
-			<scope>runtime</scope>
-		</dependency>
+		
 		<dependency>
 		    <groupId>javax.xml.bind</groupId>
 		     <artifactId>jaxb-api</artifactId>
