--- a/admin/admin-service/src/test/resources/application-test.properties
+++ b/admin/admin-service/src/test/resources/application-test.properties
@@ -315,3 +315,5 @@ mosip.iam.authorization_endpoint=http://localhost:8080/keycloak/auth/realms/{rea
 mosip.iam.module.admin_realm_id=mosip
 
 mosip.iam.token_endpoint=http://localhost:8080/keycloak/auth/realms/{realmId}/protocol/openid-connect/token
+
+mosip.admin-services.required.roles=GLOBAL_ADMIN
