--- a/admin/kernel-masterdata-service/src/main/resources/application-local.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-local.properties
@@ -63,7 +63,7 @@ mosip.kernel.applicant.type.age.limit = 5
 mosip.stage.environment=Staging
 mosip.auth.adapter.impl.basepackage=io.mosip.kernel.auth.defaultadapter
 mosip.kernel.applicantType.mvel.file=applicanttype.mvel
-mosip.kernel.config.server.file.storage.uri=https://dev.mosip.net/config/kernel/mz/1.2.0-rc1-SNAPSHOT
+mosip.kernel.config.server.file.storage.uri=https://dev.mosip.net/config/kernel/mz/1.2.0-rc1
 mosip.kernel.masterdata.auth-manager-base-uri=http://localhost:8080/
 
 
