--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -50,7 +50,7 @@ spring.cloud.config.name=master
 pring.profiles.active=test
 
 mosip.syncdata.tpm.required=false
-aplication.configuration.level.version=1.2.0-rc1-SNAPSHOT
+aplication.configuration.level.version=1.2.0-rc1
 
 mosip.kernel.masterdata.auth-manager-base-uri=http://localhost
 
