--- a/admin/kernel-syncdata-service/src/main/resources/application-local.properties
+++ b/admin/kernel-syncdata-service/src/main/resources/application-local.properties
@@ -134,7 +134,7 @@ mosip.kernel.partner.sign.masterkey.application.id=PMS
 mosip.kernel.partner.allowed.domains=test
 mosip.keymanager.dao.enabled=false
 
-aplication.configuration.level.version=1.2.0-rc1-SNAPSHOT
+aplication.configuration.level.version=1.2.0-rc1
 
 mosip.mandatory-languages=eng
 mosip.optional-languages=fra,ara
