--- a/admin/kernel-masterdata-service/src/main/resources/bootstrap.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/bootstrap.properties
@@ -26,6 +26,13 @@ javax.persistence.jdbc.user=${masterdata_database_username}
 javax.persistence.jdbc.password=${masterdata_database_password}
 javax.persistence.jdbc.schema=kernel
 
+# swagger open api 
+openapi.info.title=Master Data Service
+openapi.info.description=Master Data Service for CRUD
+openapi.info.version=1.0
+openapi.info.license.name=Mosip
+openapi.info.license.url=https://docs.mosip.io/platform/license
+springdoc.swagger-ui.disable-swagger-default-url=true
 #master.search.maximum.rows=50
 
 #mosip.kernel.database.hostname=104.211.202.203
