--- a/admin/kernel-masterdata-service/src/main/resources/bootstrap.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/bootstrap.properties
@@ -38,4 +38,12 @@ springdoc.swagger-ui.disable-swagger-default-url=true
 #mosip.kernel.database.hostname=104.211.202.203
 #mosip.kernel.database.port=9001 
 
-
+#Swagger 3.0
+openapi.info.title=Admin Service
+openapi.info.description=Admin for CRUD
+openapi.info.version=1.0
+openapi.info.license.name=Mosip
+openapi.info.license.url=https://docs.mosip.io/platform/license
+openapi.masterdata.servers[0].url=http://localhost:8086/v1/masterdata
+openapi.masterdata.servers[0].description=Admin Masterdata url
+springdoc.swagger-ui.disable-swagger-default-url=true
