--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -6,7 +6,7 @@ javax.persistence.jdbc.url=jdbc:h2\:mem\:testdb;DB_CLOSE_DELAY=-1;INIT=CREATE SC
 javax.persistence.jdbc.user=sa
 javax.persistence.jdbc.password=
 
-hibernate.hbm2ddl.auto=create-drop
+hibernate.hbm2ddl.auto=update
 hibernate.dialect=org.hibernate.dialect.H2Dialect
 hibernate.show_sql=false
 hibernate.format_sql=false
